# plane-project

./: .pre-commit-config.yaml  JOURNAL.md  dxf2png  make_pngs.sh  pyproject.toml  update_time.py
design/: README.md  design.md  design.qmd  main.py  make_step.py  pyproject.toml
schematics/: design.step
schematics/templates/tail/: root_template.dxf  tip_template.dxf
schematics/templates/wing/: root_template.dxf  tip_template.dxf
