[project]
name = "design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerosandbox[full]>=4.2.8",
    "matplotlib>=3.10.3",
    "neuralfoil>=0.3.2",
]


[tool.pyright]
typeCheckingMode = "off"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "quarto>=0.1.0",
]
